testsuite/tests/source/errors/src1/1pck.adb
package 1pck is
end 1pck;
